--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
             <div></div>
 
-            <v-btn color="grey" href="https://www.linkedin.com/in/antoine-gilles-%E2%99%A0%EF%B8%8F-236431140/" outlined large>
+            <v-btn color="grey" href="https://www.linkedin.com/in/antoine-gilles-%E2%99%A0%EF%B8%8F-236431140/" outlined
+              large>
               <span class="grey--text text--darken-1 font-weight-bold">
                 Linkedin
               </span>
@@ -178,33 +179,13 @@
           <v-container>
             <h2 class="display-2 font-weight-bold mb-3 text-uppercase text-center">Contact Me</h2>
 
-            <v-responsive class="mx-auto mb-12" width="56">
-              <v-divider class="mb-1"></v-divider>
 
-              <v-divider></v-divider>
-            </v-responsive>
 
             <v-theme-provider light>
               <v-row>
-                <v-col cols="12">
-                  <v-text-field flat label="Name*" solo></v-text-field>
-                </v-col>
-
-                <v-col cols="12">
-                  <v-text-field flat label="Email*" solo></v-text-field>
-                </v-col>
-
-                <v-col cols="12">
-                  <v-text-field flat label="Subject*" solo></v-text-field>
-                </v-col>
-
-                <v-col cols="12">
-                  <v-textarea flat label="Message*" solo></v-textarea>
-                </v-col>
-
-                <v-col class="mx-auto" cols="auto">
-                  <v-btn href="mailto:gillette-tiger@hotmail.fr?subject = Feedback&body = yo" color="accent" x-large>
-                    Submit
+                <v-col class="mx-auto mt-4" cols="auto">
+                  <v-btn href="mailto:antoinegillesapb@hotmail.com" color="accent" x-large>
+                     <v-icon class="pr-3" >mdi-email</v-icon> Send e-mail
                   </v-btn>
                 </v-col>
               </v-row>
@@ -264,9 +245,10 @@
             ['5', 'Year of experiences'],
           ],
         }
-      }
+      },
     })
   </script>
+
 </body>
 
 </html>
