--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
             <v-container fill-height>
               <v-row class="mx-auto">
                 <v-col class="text-center">
-                  <div class="display-3 font-weight-black mb-4">Certification</div>
+                  <div class="display-1 font-weight-black mb-4">Certification</div>
                 </v-col>
               </v-row>
               <v-row class="mx-auto">
                 <v-col v-for="[value, title] of stats" :key="title" cols="12" md="3">
                   <div class="text-center">
-                    <div class="display-3 font-weight-black mb-4" v-text="value"></div>
+                    <div class="display-2 font-weight-black mb-4" v-text="value"></div>
 
                     <div class="title font-weight-regular text-uppercase" v-text="title"></div>
                   </div>
@@ -242,7 +242,7 @@
             ['Level 5', 'Developper Web and Web Mobile'],
             ['Level 6', 'Design Developer Applications'],
             ['Level 7', 'Manager of digital and data solutions'],
-            ['5', 'Year of experiences'],
+            ['5 Year', 'experiences'],
           ],
         }
       },
