--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             </v-responsive>
 
             <v-avatar class="elevation-12 mb-12" size="128">
-              <v-img src="./moi4.jpg"></v-img>
+              <v-img src="./img/moi4.jpg"></v-img>
             </v-avatar>
 
             <div></div>
